syntax = "proto3";

package departments;

option go_package = "github.com/ShristiRnr/NHIT_Backend/api/pb/departmentpb;departmentpb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

// =====================
// Department Entity
// =====================
message Department {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// =====================
// Requests
// =====================
message CreateDepartmentRequest {
  string name = 1;
  string description = 2;
}

message GetDepartmentRequest {
  string id = 1;
}

message UpdateDepartmentRequest {
  string id = 1;
  string name = 2;
  string description = 3;
}

message DeleteDepartmentRequest {
  string id = 1;
}

message ListDepartmentsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

// =====================
// Pagination Metadata
// =====================
message PaginationMetadata {
  int32 current_page = 1;
  int32 page_size = 2;
  int32 total_items = 3;
  int32 total_pages = 4;
}

// =====================
// Responses
// =====================
message DepartmentResponse {
  Department department = 1;
  string message = 2;
}

message ListDepartmentsResponse {
  repeated Department departments = 1;
  int32 total_count = 2;
  PaginationMetadata pagination = 3;
}

message DeleteDepartmentResponse {
  bool success = 1;
  string message = 2;
}

// =====================
// Service Definition
// =====================
service DepartmentService {

  rpc CreateDepartment(CreateDepartmentRequest) returns (DepartmentResponse) {
    option (google.api.http) = {
      post: "/api/v1/departments"
      body: "*"
    };
  }

  rpc GetDepartment(GetDepartmentRequest) returns (DepartmentResponse) {
    option (google.api.http) = {
      get: "/api/v1/departments/{id}"
    };
  }

  rpc UpdateDepartment(UpdateDepartmentRequest) returns (DepartmentResponse) {
    option (google.api.http) = {
      put: "/api/v1/departments/{id}"
      body: "*"
    };
  }

  rpc DeleteDepartment(DeleteDepartmentRequest) returns (DeleteDepartmentResponse) {
    option (google.api.http) = {
      delete: "/api/v1/departments/{id}"
    };
  }

  rpc ListDepartments(ListDepartmentsRequest) returns (ListDepartmentsResponse) {
    option (google.api.http) = {
      get: "/api/v1/departments"
    };
  }
}